--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="/portfolio">Portfolio</a>
                 <a class="nav-link" href="/contact">Contact</a>
             </div>
-            <div class="navbar-nav ms-auto" id="social-buttons-nav">
+            <div class="navbar-nav" id="social-buttons-nav">
                 <a href="https://www.linkedin.com/in/pardis-moravej-7094911a2" class="nav-link"><i class="bi bi-linkedin" style="font-size: 1.5rem;"></i></a>
                 <a href="https://github.com/pardismoravej" class="nav-link"><i class="bi bi-github" style="font-size: 1.5rem;"></i></a>
                 <a href="https://twitter.com/pmoravej" class="nav-link"><i class="bi bi-twitter" style="font-size: 1.5rem;"></i></a>
