commit on 'master'

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,7 +1,9 @@
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "../node_modules/bootstrap/scss/functions";
+// Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400&display=swap');
+// font-family: 'Kiwi Maru', serif;
+// font-family: 'Roboto', sans-serif;
 
-// 2. Include any default variable overrides here
+// Include any default variable overrides here
 $primary: #a4bb79;
 $secondary: #cc513b;
 $success: #66b45c;
@@ -14,48 +16,56 @@ $cream: #ffffca;
 $body-bg: $info;
 
 // 3. Include remainder of required Bootstrap stylesheets
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
-
-// 4. Include any optional Bootstrap components as you like
-@import "../node_modules/bootstrap/scss/root";
-@import "../node_modules/bootstrap/scss/reboot";
-@import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/images";
-@import "../node_modules/bootstrap/scss/grid";
-@import "../node_modules/bootstrap/scss/navbar";
-@import "../node_modules/bootstrap/scss/nav";
-@import "../node_modules/bootstrap/scss/buttons";
-@import "../node_modules/bootstrap/scss/card";
-@import "../node_modules/bootstrap/scss/close";
-@import "../node_modules/bootstrap/scss/code";
-@import "../node_modules/bootstrap/scss/media";
-@import "../node_modules/bootstrap/scss/modal";
-@import "../node_modules/bootstrap/scss/transitions";
-@import "../node_modules/bootstrap/scss/tooltip";
-@import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/utilities";
-@import "../node_modules/bootstrap/scss/bootstrap-grid";
-
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "/sass/tooltips";
 // 5. Add additional custom code here
 body {
 	color: $light;
+	font-family: 'Roboto', sans-serif;
+}
+h1 {
+	font-family: 'Kiwi Maru', serif;
+}
+p {
+	font-weight: 100;
+	font-size: 1.25em;
+}
+footer {
+	margin-block-start: auto;
+	position: fixed;
+	width: 100%;
+	bottom: 0%;
+}
+.navbar {
+	font-family: 'Kiwi Maru', serif;
 }
 .card-body {
 	background-color: $primary;
 	color: $info;
+	z-index: 0;
 	i {
 		padding-right: 35px;
 		padding-top: 15px;
 	}
 	.card-title {
 		color: $dark;
+		font-family: 'Kiwi Maru', serif;
 	}
 }
 .card {
 	border-color: $dark;
 	border-radius: 0;
+	z-index: 0;
+}
+.fab {
+	z-index: -1;
 }
 #social-buttons-nav {
 	margin-inline-start: auto;
+}
+#social-buttons-contact {
+	a {
+		font-size: 2.5em;
+		color: $primary;
+	}
 }
