--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
+<h1 class="text-center mb-5">I'd love to collaborate or answer any questions!</h1>
 <div class="row">
-    <h1 class="text-center">I'd love to collaborate or answer any questions!</h1>
     <div class="col-md-6 offset-md-3 text-center">
 
         <!-- <form action="" novalidate class="validated-form">
@@ -23,11 +23,14 @@
         </form> -->
         <p> <strong>Email me:</strong> </p>
         <p>contact@pardismoravej.io</p>
-        <p><strong>or find me on social media:</strong></p>
-        <a href="https://www.linkedin.com/in/pardis-moravej-7094911a2" class="d-inline nav-link"><i class="bi bi-linkedin"
-                style="font-size: 1.5rem;"></i></a>
-        <a href="https://github.com/pardismoravej" class="d-inline nav-link"><i class="bi bi-github" style="font-size: 1.5rem;"></i></a>
-        <a href="https://twitter.com/pmoravej" class="d-inline nav-link"><i class="bi bi-twitter" style="font-size: 1.5rem;"></i></a>
-
+        <p>or</p>
+        <p>pardis.moravej@gmail.com</p>
+        <br>
+        <p><strong>Find me on social media:</strong></p>
+        <div id="social-buttons-contact">
+            <a href="https://www.linkedin.com/in/pardis-moravej-7094911a2" class="d-inline nav-link"><i class="bi bi-linkedin"></i></a>
+            <a href="https://github.com/pardismoravej" class="d-inline nav-link"><i class="bi bi-github"></i></a>
+            <a href="https://twitter.com/pmoravej" class="d-inline nav-link"><i class="bi bi-twitter"></i></a>
+        </div>
     </div>
 </div>
