--- a/sass/_tooltips.scss
+++ b/sass/_tooltips.scss
@@ -1,49 +1,103 @@
-.tooltip {
-	display: inline-block;
-	position: relative;
-	border-bottom: 1px dotted #666;
-	text-align: left;
-}
+// Credit to Chris Bracco on CondePen: https://codepen.io/cbracco/pen/qzukg
 
-.tooltip .top {
-	min-width: 200px;
-	top: -20px;
-	left: 50%;
-	transform: translate(-50%, -100%);
-	padding: 10px 20px;
-	color: #f8f9fa;
-	background-color: #1b3d45;
-	font-weight: normal;
-	font-size: 13px;
-	border-radius: 8px;
-	position: absolute;
-	z-index: 99999999;
+/**
+ * Demo styles
+ * Not needed for tooltips to work
+ */
+
+/* `border-box`... ALL THE THINGS! */
+html {
 	box-sizing: border-box;
-	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
-	display: none;
 }
 
-.tooltip:hover .top {
-	display: block;
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
 }
 
-.tooltip .top i {
+body {
+	margin: 64px auto;
+	text-align: center;
+	font-size: 100%;
+	max-width: 640px;
+	width: 94%;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+header,
+.demo,
+.demo p {
+	margin: 4em 0;
+	text-align: center;
+}
+
+/**
+ * Tooltip Styles
+ */
+
+/* Add this attribute to the element that needs a tooltip */
+[data-tooltip] {
+	position: relative;
+	z-index: 2;
+	cursor: pointer;
+}
+
+/* Hide the tooltip content by default */
+[data-tooltip]:before,
+[data-tooltip]:after {
+	visibility: hidden;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=0);
+	opacity: 0;
+	pointer-events: none;
+}
+
+/* Position tooltip above the element */
+[data-tooltip]:before {
 	position: absolute;
-	top: 100%;
+	bottom: 150%;
 	left: 50%;
-	margin-left: -12px;
-	width: 24px;
-	height: 12px;
-	overflow: hidden;
+	margin-bottom: 5px;
+	margin-left: -80px;
+	padding: 7px;
+	width: 160px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	background-color: #000;
+	background-color: hsla(0, 0%, 20%, 0.9);
+	color: #fff;
+	content: attr(data-tooltip);
+	text-align: center;
+	font-size: 14px;
+	line-height: 1.2;
 }
 
-.tooltip .top i::after {
-	content: '';
+/* Triangle hack to make tooltip look like a speech bubble */
+[data-tooltip]:after {
 	position: absolute;
-	width: 12px;
-	height: 12px;
+	bottom: 150%;
 	left: 50%;
-	transform: translate(-50%, -50%) rotate(45deg);
-	background-color: #1b3d45;
-	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.5);
+	margin-left: -5px;
+	width: 0;
+	border-top: 5px solid #000;
+	border-top: 5px solid hsla(0, 0%, 20%, 0.9);
+	border-right: 5px solid transparent;
+	border-left: 5px solid transparent;
+	content: " ";
+	font-size: 0;
+	line-height: 0;
+}
+
+/* Show tooltip content on hover */
+[data-tooltip]:hover:before,
+[data-tooltip]:hover:after {
+	visibility: visible;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
+	opacity: 1;
 }
