--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,24 @@
 <% layout('layouts/boilerplate') %>
+<script src="https://cdnjs.com/libraries/bodymovin" type="text/javascript"></script>
 
-<div id="first-thing">
+
+<div id="">
     Welcome to my site it's great!!!
     Please be patient as it's still a work in progress!
 </div>
+
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<lottie-player src="https://assets7.lottiefiles.com/packages/lf20_looriptm.json" 
+    background="transparent" 
+    speed="1" 
+    style="width: 300px; height: 300px;" 
+    loop controls autoplay>
+</lottie-player>
+    <!-- var animation = bodymovin.loadAnimation({
+        container: document.getElementById('lottie'), // Required
+        path: 'data.json', // Required
+        renderer: 'svg/canvas/html', // Required
+        loop: true, // Optional
+        autoplay: true, // Optional
+        name: "Landing Page", // Name for future reference. Optional.
+    }) -->
